Fixes issue with standard name form
The issue caused a broken navbar and a mixture of light and dark theming if the browser is set to use a dark theme.

(Refs #973)

--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -1,9 +1,13 @@
 {% extends "remapp/base.html" %}
 
 {% block headextras %}
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/base.css" />
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/forms.css" />
+    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/widgets.css" />
     <!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}admin/css/ie.css" /><![endif]-->
+    <style>
+        .selector h2 {
+            font-size: 1.25em;
+        }
+    </style>
 {% endblock %}
 
 {% block navhelp %}
