--- a/openrem/remapp/templates/remapp/exports.html
+++ b/openrem/remapp/templates/remapp/exports.html
@@ -1,7 +1,7 @@
 {% extends "remapp/base.html" %}
 
 {% block exportnav %}
-  <li class="active">
+  <li class="active dropdown">
 {% endblock %}
 
 {% block navhelp %}
