--- a/openrem/remapp/templates/remapp/task_admin.html
+++ b/openrem/remapp/templates/remapp/task_admin.html
@@ -5,7 +5,7 @@
   <script src="{{ STATIC_URL }}js/django_reverse/reverse.js"></script>
 {% endblock %}
 
-{% block confnav %}
+{% block exportnav %}
   <li class="dropdown active">{% endblock %}
 
 {% block navhelp %}
