Minor change to tasks entry. Refs #981

--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -108,7 +108,7 @@
                             <li><a href="{% url 'export' %}">{% trans "Exports" %}</a></li>
                         {% endif %}
                         {% if admin.admingroup %}
-                            <li><a href="{% url 'task_admin' %}">{% trans "Tasks" %}</a></li>
+                            <li><a href="{% url 'task_admin' %}">{% trans "All tasks" %}</a></li>
                         {% endif %}
                     </ul>
                 {% endif %}
