--- a/openrem/remapp/templates/remapp/displayname-modality.html
+++ b/openrem/remapp/templates/remapp/displayname-modality.html
@@ -41,6 +41,7 @@
           {% endif %}
         </td>
       {% endif %}
+
       <td><a style="text-decoration: none">{{ eachrow.institution_name }}</a></td>
       <td><a style="text-decoration: none">{{ eachrow.institutional_department_name }}</a></td>
       <td><a style="text-decoration: none">{{ eachrow.manufacturer }}</a></td>
@@ -49,30 +50,10 @@
       <td><a style="text-decoration: none">{{ eachrow.device_serial_number }}</a></td>
       <td><a style="text-decoration: none">{{ eachrow.software_versions }}</a></td>
       <td><a style="text-decoration: none">{{ eachrow.gantry_id }}</a></td>
-      <td id="{{ modality }}-count-{{ eachrow.pk }}"></td>
-      <td id="{{ modality }}-latest-{{ eachrow.pk }}"></td>
-        <script>
-            $(document).ready(
-                function get_latest_studies(json) {
-                    $.ajax(
-                        {
-                            url: "{% url 'display_name_last_date_and_count' %}",
-                            data: {
-                                modality: '{{ modality }}',
-                                equip_name_pk: '{{ eachrow.pk }}',
-                                csrfmiddlewaretoken: '{{ csrf_token }}'
-                            },
-                            type: "POST",
-                            success: function (data) {
-                                $('#{{ modality }}-count-{{ eachrow.pk }}').html(data.count_html);
-                                $('#{{ modality }}-latest-{{ eachrow.pk }}').html(data.latest_html);
-                            }
-                        }
-                    )
 
-                }
-            )
-        </script>
+      <td><a style="text-decoration: none">{{ eachrow.num_entries }}</a></td>
+      <td><a style="text-decoration: none">{{ eachrow.latest_entry_date }}</a></td>
+
       {% if modality == 'RF' %}
           <td id="{{ modality }}-skin-{{ eachrow.pk }}"></td>
             <script>
