Added a method to obtain the count of failed imports for all modalities in a single query, rather than running a query per modality. Now only needs to be called once. Refs issue #983

--- a/openrem/remapp/templates/remapp/displaynameview.html
+++ b/openrem/remapp/templates/remapp/displaynameview.html
@@ -120,6 +120,10 @@
               )
           }
       );
+  </script>
+{% endfor %}
+
+  <script>
       $(document).ready(
           function get_failed_imports_list(json) {
               $.ajax(
@@ -137,7 +141,6 @@
           }
       )
   </script>
-{% endfor %}
 
 {% if admin.admingroup %}
   <input class="btn btn-default" type="submit" value="Update">
