--- a/openrem/remapp/templates/remapp/home-list-modalities.html
+++ b/openrem/remapp/templates/remapp/home-list-modalities.html
@@ -15,6 +15,51 @@
       {% endif %}
     </tr>
     {% for details in study_data %}
+
+      {% if not details.generalequipmentmoduleattr__unique_equipment_name__display_name %}
+
+      <tr>
+        <td style="width: 25%">
+          {% if admin.admingroup %}
+            <a href="{% url 'review_failed_imports' modality|upper %}">Failed import - review here</a>
+          {% else %}
+            <a href="#">Failed import - ask an administrator to review</a>
+          {% endif %}
+        </td>
+        <td style="width:25%">
+          {% if admin.admingroup %}
+            <a href="{% url 'review_failed_imports' modality|upper %}">
+          {% else %}
+            <a href="#">
+          {% endif %}
+            {{ details.total }}
+          </a>
+        </td>
+        <td style="width:25%" sorttable_customkey="{{ details.deltaseconds }}">
+          {% if admin.admingroup %}
+            <a href="{% url 'review_failed_imports' modality|upper %}">
+          {% else %}
+            <a href="#">
+          {% endif %}
+            {{ details.latest|naturaltime }}
+          </a>
+        </td>
+        {% if home_config.display_workload_stats %}
+          <td style="width:12.5%">
+          {% if admin.admingroup %}
+            <a href="{% url 'review_failed_imports' modality|upper %}"></a>
+          {% endif %}
+          </td>
+          <td style="width:12.5%">
+          {% if admin.admingroup %}
+            <a href="{% url 'review_failed_imports' modality|upper %}"></a>
+          {% endif %}
+          </td>
+        {% endif %}
+      </tr>
+
+      {% else %}
+
       <tr>
         <td style="width:25%">
           <a href="{% url url_name %}?generalequipmentmoduleattr__unique_equipment_name__display_name={{ details.generalequipmentmoduleattr__unique_equipment_name__display_name }}&o=-study_date">
@@ -40,8 +85,10 @@
           </td>
         {% endif %}
       </tr>
-    {% endfor %}
 
+      {% endif %}
+
+    {% endfor %}
 
   </table>
 {% endwith %}
