Fixed table sorting on home page. I don't know how long this has been broken for, but it doesn't work on demo.openrem.org. A side-effect of this fix is that I no longer need the timedelta annotation. However, I've not deleted it, just commented it out, because it took me a while to work out how to do it, and it may be useful in the future. Refs issue #984

--- a/openrem/remapp/templates/remapp/home-list-modalities.html
+++ b/openrem/remapp/templates/remapp/home-list-modalities.html
@@ -35,7 +35,7 @@
             {{ details.total }}
           </a>
         </td>
-        <td style="width:25%" sorttable_customkey="{{ details.deltaseconds }}">
+        <td style="width:25%" sorttable_customkey="{{ details.latest_entry_date_time|date:"U" }}">
           {% if admin.admingroup %}
             <a href="{% url 'review_failed_imports' modality|upper %}">
           {% else %}
@@ -71,7 +71,7 @@
             {{ details.num_studies }}
           </a>
         </td>
-        <td style="width:25%" sorttable_customkey="{{ details.timedelta }}">
+        <td style="width:25%" sorttable_customkey="{{ details.latest_entry_date_time|date:"U" }}">
           <a href="{% url url_name %}?generalequipmentmoduleattr__unique_equipment_name__display_name={{ details.generalequipmentmoduleattr__unique_equipment_name__display_name }}&o=-study_date">
             {{ details.latest_entry_date_time|naturaltime }}
           </a>
