Removed spurious colon. Refs issue #991

--- a/openrem/remapp/templates/remapp/rf_dose_alert_email_template.html
+++ b/openrem/remapp/templates/remapp/rf_dose_alert_email_template.html
@@ -246,7 +246,7 @@
                         <th scope="col">Accession number</th>
                         <th scope="col">Total DAP (cGy.cm<sup>2</sup>)</th>
                         <th scope="col">Total dose at RP (Gy)</th>
-                        <th scope="col">Calculated peak skin dose to openSkin phantom (Gy):</th>
+                        <th scope="col">Calculated peak skin dose to openSkin phantom (Gy)</th>
                         <th scope="col">OpenREM link</th>
                     </tr>
                     {% for each_study in studies_in_week_delta %}
