--- a/openrem/remapp/templates/remapp/standardnames_form.html
+++ b/openrem/remapp/templates/remapp/standardnames_form.html
@@ -24,12 +24,12 @@
 
 {% block mainblock %}
 
-    <div class="row col-md-offset-2">
+    <div class="row col-sm-offset-1">
         <h1>Create or modify a standard name for {{ form.modality.value }} systems</h1>
     </div>
 
     <div class="row">
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-sm-10 col-sm-offset-1">
             <div class="panel panel-info">
                 <div class="panel-heading">
                     Enter the
