Removed direct link to thesis from the rfdetail page. Now links to the limitations section of the skin dose map documentation. Updated the skin dose map document. Documentation update only, so [skip ci]. Refs issue #939

--- a/openrem/remapp/templates/remapp/rfdetail.html
+++ b/openrem/remapp/templates/remapp/rfdetail.html
@@ -361,10 +361,13 @@
             <div class="openskin_info" id="openskin_info">
                 Skin dose maps are calculated using openSkin. Monte Carlo validation has been carried out for a Siemens
                 Artis zee system for the body section of the phantom: openSkin results were within &pm; 20&percnt; of
-                the Monte Carlo results (see <a href="https://research.manchester.ac.uk/en/studentTheses/monte-carlo-simulation-of-skin-dose-distribution-from-interventio">this</a>
-                University of Manchester thesis). Skin dose values depend on the accuracy of the x-ray system's dose at
-                reference point and DAP values. For other types of x-ray system the results are for indication only as
-                they have not been validated.
+                the Monte Carlo results (see the <a
+                    href="https://docs.openrem.org/en/{{ admin.docsversion }}/skindosemap.html#limitations"
+                    target="_blank" data-toggle="tooltip" title="Skin dose map documentation - opens in a new tab">skin
+                    dose map documentation</a>
+                for details). Skin dose values depend on the accuracy of the x-ray system's dose at reference point and
+                DAP values. For other types of x-ray system the results are for indication only as they have not been
+                validated.
 
                 Contributions are welcome, see <a href="http://bitbucket.org/openskin/openskin">openSkin website</a> for
                 details.
