data export naming inconsistency. refs issue #1004

--- a/openrem/remapp/templates/remapp/ctfiltered.html
+++ b/openrem/remapp/templates/remapp/ctfiltered.html
@@ -44,7 +44,7 @@
                     </p>
               <p>
                   <a href="{% url 'ct_xlsx_phe2019' %}?{{ request.GET.urlencode }}"
-                     class="btn btn-default btn-sm" role="button">PHE 2019 survey</a>
+                     class="btn btn-default btn-sm" role="button">PHE 2019 Survey</a>
               </p>
 
             {% else %}
