--- a/openrem/remapp/templates/remapp/mgfiltered.html
+++ b/openrem/remapp/templates/remapp/mgfiltered.html
@@ -32,7 +32,7 @@
     <p>
           {% endif %}
       <a href="{% url 'mgxlsx1' 0 0 %}?{{ request.GET.urlencode }}"
-             class="btn btn-default btn-sm" role="button">Export to xlsx</a>
+             class="btn btn-default btn-sm" role="button">Export to XLSX</a>
           {% if admin.pidgroup %}
               <a href="{% url 'mgxlsx1' 1 0 %}?{{ request.GET.urlencode }}"
                  class="btn btn-default btn-sm" role="button">With names</a>
