add more home page filtering options. refs issue #661

--- a/openrem/remapp/templates/remapp/home.html
+++ b/openrem/remapp/templates/remapp/home.html
@@ -61,8 +61,8 @@
     <p>
         {# Translators: Number of studies in DB listed above home-page table. No final full-stop in English due to a.m./p.m. #}
         {% now "DATETIME_FORMAT" as current_time %}
-        {% blocktrans with total_studies=homedata.total trimmed%}
-            There are {{ total_studies }} studies in this database. Page last refreshed on {{ current_time }}
+        {% blocktrans with total_studies=homedata.total filtered_studies=homedata.filtered trimmed%}
+            There are {{ total_studies }} studies in this database. {{ filtered_studies }} studies match the filters. Page last refreshed on {{ current_time }}
         {% endblocktrans %}
         {% if user.is_authenticated %}
             {% if request.user.userprofile.plotCharts %}
@@ -134,7 +134,7 @@
         <tr>
             {% for modality, details in modalities.items %}
                 {% with modality|add:'_summary_list_filter' as url_name %}
-                    <th scope="col" style="width:20%"><a href="{% url url_name|lower %}">{{ details.name }}</a></th>
+                    <th scope="col" style="width:20%"><a href="{% url url_name|lower %}?generalequipmentmoduleattr__institution_name={{home_config.institution}}">{{ details.name }}</a></th>
                 {% endwith %}
             {% endfor %}
         </tr>
